<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/baseline_favorite_24_full"
        android:title="@string/favorite_page"
        app:showAsAction="ifRoom"/>

</menu>